# Sudoku_Solver_Game

./: .dockerignore  .gitignore  Backtracking.py  Constraint_propagation.py  Dockerfile  Grid.py  Measures.py  README.md  inter.py  pyproject.toml  requirements.txt
sudoku/: grid.py  measures.py  solver.py  sudoku.py
test/: test.py  test_2.py  test_3.py  test_4.py
