[tool.poetry]
name = "sudoku-solver"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [{include = "IAFPS_SUDOKU"}]

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
